--- a/index.html
+++ b/index.html
@@ -7,10 +7,25 @@
     <link rel="stylesheet" href="/SASS/css/index.css" />
   </head>
   <body>
-    <h1>This is an h1</h1>
-    <a href="">this is an anchor tag</a>
-    <p class="error">this is an error</p>
-    <p class="notification">this is a notification</p>
-    <button>click me</button>
+    <!-- Colors -->
+
+    <!-- Font-Size -->
+
+    <!-- Buttons -->
+
+    <!-- Cards -->
+    <h2>Cards</h2>
+    <div class="card">
+      <h1 class="card-title">This is a card title</h1>
+      <p class="card-body">
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vitae
+        similique, aut architecto maxime maiores voluptates corrupti
+        <a href="#">amet dicta molestias</a> velit!
+      </p>
+    </div>
+
+    <!-- Grid-System -->
+
+    <!-- Utilities -->
   </body>
 </html>
