--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Complete SASS</title>
-    <link rel="stylesheet" href="/SASS/css/index.css" />
+    <link rel="stylesheet" href="/css/index.css" />
   </head>
   <body>
     <div>
@@ -66,6 +66,8 @@
       <a href="#" class="btn-outlined-orange text-orange text-hover-white"
         >click me</a
       >
+      <a href="#" class="btn-complement-purple">clcik me</a>
+      <a href="#" class="btn-complement-primary">clcik me</a>
 
       <!-- cards -->
       <h2>Cards</h2>
