--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/css/index.css" />
   </head>
   <body>
-    <div>
+    <div class="container">
       <!-- colors -->
       <h2>Colors</h2>
       <span class="text-primary">primary text</span> |
@@ -98,8 +98,42 @@
 
       <hr class="mt-4 mb-4" />
 
-      <!-- grid system -->
-      <div class="responsive-test">changing colors</div>
+      <!-- Grid System -->
+      <h2 class="mb-2">Grid System</h2>
+      <div class="row gap-2 justify-center">
+        <div class="col-12-xs col-5-sm col-3-xl">
+          <div class="card">
+            <h3 class="card-title">Hello, ninjas</h3>
+            <p class="card-body">
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+            </p>
+          </div>
+        </div>
+        <div class="col-12-xs col-5-sm col-3-xl">
+          <div class="card">
+            <h3 class="card-title">Hello, ninjas</h3>
+            <p class="card-body">
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+            </p>
+          </div>
+        </div>
+        <div class="col-12-xs col-5-sm col-3-xl">
+          <div class="card">
+            <h3 class="card-title">Hello, ninjas</h3>
+            <p class="card-body">
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+            </p>
+          </div>
+        </div>
+        <div class="col-12-xs col-5-sm col-3-xl">
+          <div class="card">
+            <h3 class="card-title">Hello, ninjas</h3>
+            <p class="card-body">
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+            </p>
+          </div>
+        </div>
+      </div>
 
       <hr class="mt-4 mb-4" />
 
