--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
   <body>
     <nav class="navbar-primary text-white mb-4">
       <div class="container">
-        <h2 class="site-title">Shinobi CSS</h2>
+        <h2 class="site-title">Turboo CSS</h2>
         <p>A lightweight CSS library for dev</p>
       </div>
     </nav>
 
     <div class="container">
-      <!-- colors -->
+      <!-- Colors -->
       <h2>Colors</h2>
       <span class="text-primary">primary text</span> |
       <span class="text-secondary">secondary text</span> |
@@ -60,7 +60,7 @@
 
       <hr class="mt-4 mb-4" />
 
-      <!-- font sizes -->
+      <!-- Font Sizes -->
       <h2 class="mb-2">Font Sizes</h2>
       <div class="font-sm">this is small font</div>
       <div class="font-md">this is medium font</div>
@@ -70,7 +70,7 @@
 
       <hr class="mt-4 mb-4" />
 
-      <!-- buttons -->
+      <!-- Buttons -->
       <h2>Buttons</h2>
       <a href="#" class="btn">default btn</a>
       <a href="#" class="btn-primary text-white">click me</a>
@@ -88,7 +88,7 @@
 
       <hr class="mt-4 mb-4" />
 
-      <!-- cards -->
+      <!-- Cards -->
       <h2>Cards</h2>
       <div class="card">
         <h1 class="card-title">This is a title</h1>
@@ -110,7 +110,7 @@
       <div class="row gap-2 justify-center">
         <div class="col-12-xs col-5-sm col-3-xl">
           <div class="card">
-            <h3 class="card-title">Hello, ninjas</h3>
+            <h3 class="card-title">Hello World</h3>
             <p class="card-body">
               Lorem ipsum, dolor sit amet consectetur adipisicing elit.
             </p>
@@ -118,7 +118,7 @@
         </div>
         <div class="col-12-xs col-5-sm col-3-xl">
           <div class="card">
-            <h3 class="card-title">Hello, ninjas</h3>
+            <h3 class="card-title">Hello World</h3>
             <p class="card-body">
               Lorem ipsum, dolor sit amet consectetur adipisicing elit.
             </p>
@@ -126,7 +126,7 @@
         </div>
         <div class="col-12-xs col-5-sm col-3-xl">
           <div class="card">
-            <h3 class="card-title">Hello, ninjas</h3>
+            <h3 class="card-title">Hello World</h3>
             <p class="card-body">
               Lorem ipsum, dolor sit amet consectetur adipisicing elit.
             </p>
@@ -134,7 +134,7 @@
         </div>
         <div class="col-12-xs col-5-sm col-3-xl">
           <div class="card">
-            <h3 class="card-title">Hello, ninjas</h3>
+            <h3 class="card-title">Hello World</h3>
             <p class="card-body">
               Lorem ipsum, dolor sit amet consectetur adipisicing elit.
             </p>
