Complete edition of the library

--- a/homepage.html
+++ b/homepage.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CSS</title>
+    <title>CSS Webpage using Turboo library</title>
     <link rel="stylesheet" href="/css/index.css" />
   </head>
   <body>
     <!-- navbar -->
     <nav class="navbar justify-between">
       <div class="container">
-        <h1 class="site-title">Shinobi Designs</h1>
+        <h1 class="site-title">Turboo Designs</h1>
         <ul class="display-f">
           <li class="ml-1 text-hover-secondary">
             <a href="#work">Our Work</a>
@@ -121,7 +121,7 @@
 
     <!-- footer -->
     <footer class="bg-gray-light-7 pt-3 pb-3 mt-5">
-      <div class="container">copyright 2023 Shinobi Designs</div>
+      <div class="container">copyright 2023 Designs</div>
     </footer>
   </body>
 </html>
