--- a/homepage.html
+++ b/homepage.html
@@ -10,7 +10,7 @@
     <!-- navbar -->
     <nav class="navbar justify-between">
       <div class="container">
-        <h1 class="site-title">Turboo Designs</h1>
+        <h1 class="site-title">Designs</h1>
         <ul class="display-f">
           <li class="ml-1 text-hover-secondary">
             <a href="#work">Our Work</a>
@@ -48,7 +48,7 @@
     <!-- about -->
     <section id="about" class="bg-secondary-light-9 mt-5 pt-4 pb-4">
       <div class="container">
-        <h2 class="mb-2">About Shinobi Designs</h2>
+        <h2 class="mb-2">About Our Designs</h2>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa ipsam
           animi aliquid sequi fuga, nam nesciunt dolore libero dolorem
@@ -84,7 +84,7 @@
           </div>
           <div class="col-12-xs col-6-md col-3-lg">
             <div class="card p-0">
-              <h3 class="card-title m-1">Ninja Food</h3>
+              <h3 class="card-title m-1">Food</h3>
               <img src="/img/food.png" alt="food" />
               <p class="m-1">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam,
@@ -104,7 +104,7 @@
           </div>
           <div class="col-12-xs col-6-md col-3-lg">
             <div class="card p-0">
-              <h3 class="card-title m-1">Ninja Notes</h3>
+              <h3 class="card-title m-1">Notes</h3>
               <img src="/img/notes.png" alt="notes" />
               <p class="m-1">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam,
