--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <nav class="navbar-primary text-white mb-4">
       <div class="container">
-        <h2 class="site-title">Turboo CSS</h2>
+        <h2 class="site-title">Turboo CSS Library</h2>
         <p>A lightweight CSS library for dev</p>
       </div>
     </nav>
