--- a/homepage.html
+++ b/homepage.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CSS Webpage using Turboo library</title>
-    <link rel="stylesheet" href="/css/index.css" />
+    <title>Turboo library</title>
+    <link rel="stylesheet" href="./css/index.css" />
   </head>
   <body>
     <!-- navbar -->
     <nav class="navbar justify-between">
       <div class="container">
-        <h1 class="site-title">Turboo Designs</h1>
+        <h1 class="site-title">Designs</h1>
         <ul class="display-f">
           <li class="ml-1 text-hover-secondary">
             <a href="#work">Our Work</a>
@@ -40,7 +40,7 @@
           >
         </div>
         <div class="col-12-xs col-5-md">
-          <img src="/img/laptop.svg" alt="laptop" />
+          <img src="./img/laptop.svg" alt="laptop" />
         </div>
       </div>
     </div>
@@ -74,8 +74,10 @@
         <div class="row gap-2">
           <div class="col-12-xs col-6-md col-3-lg">
             <div class="card p-0">
-              <h3 class="card-title m-1">Mario Club</h3>
-              <img src="/img/mario.png" alt="mario" />
+              <h3 class="card-title m-1">
+                Mario Club <span class="badge-orange text-white ml-1">new</span>
+              </h3>
+              <img src="./img/mario.png" alt="mario" />
               <p class="m-1">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam,
                 hic!
@@ -84,8 +86,8 @@
           </div>
           <div class="col-12-xs col-6-md col-3-lg">
             <div class="card p-0">
-              <h3 class="card-title m-1">Ninja Food</h3>
-              <img src="/img/food.png" alt="food" />
+              <h3 class="card-title m-1">Food</h3>
+              <img src="./img/food.png" alt="food" />
               <p class="m-1">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam,
                 hic!
@@ -95,7 +97,7 @@
           <div class="col-12-xs col-6-md col-3-lg">
             <div class="card p-0">
               <h3 class="card-title m-1">Just Add Marmite</h3>
-              <img src="/img/marmite.png" alt="marmite" />
+              <img src="./img/marmite.png" alt="marmite" />
               <p class="m-1">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam,
                 hic!
@@ -104,8 +106,8 @@
           </div>
           <div class="col-12-xs col-6-md col-3-lg">
             <div class="card p-0">
-              <h3 class="card-title m-1">Ninja Notes</h3>
-              <img src="/img/notes.png" alt="notes" />
+              <h3 class="card-title m-1">Notes</h3>
+              <img src="./img/notes.png" alt="notes" />
               <p class="m-1">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam,
                 hic!
