--- a/homepage.html
+++ b/homepage.html
@@ -48,7 +48,7 @@
     <!-- about -->
     <section id="about" class="bg-secondary-light-9 mt-5 pt-4 pb-4">
       <div class="container">
-        <h2 class="mb-2">About Shinobi Designs</h2>
+        <h2 class="mb-2">About Designs</h2>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa ipsam
           animi aliquid sequi fuga, nam nesciunt dolore libero dolorem
